Adjust mobile view aligntment to center  issue #249

--- a/css/styles.css
+++ b/css/styles.css
@@ -10140,4 +10140,6 @@ div.desc {
   .partners-img{
     width: 155px;
     justify-content: center;
+    padding-bottom: 30px;
   }
+  
